# https://packaging.python.org/en/latest/tutorials/packaging-projects/

[build-system]
requires = ['setuptools>=77.0']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ['oauth_dropins*']

[project.urls]
Homepage = 'https://oauth-dropins.appspot.com/'
Documentation = 'https://oauth-dropins.readthedocs.io/'

[project]
name = 'oauth-dropins'
version = '7.0'
description = 'Drop-in OAuth Flask views for many popular sites.'
readme = 'README.md'
authors = [
    { name='Ryan Barrett', email='oauth-dropins@ryanb.org' },
]
license = 'CC0-1.0'
requires-python = '>=3.9'
keywords = ['oauth', 'appengine']
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: System :: Systems Administration :: Authentication/Directory',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
]

dependencies = [
    'arroba>=0.4',
    'flask>=2.0.1',
    'google-cloud-ndb>=1.10.1',
    'lexrpc>=1.1',
    'mf2util>=0.5.0',
    'oauthlib>=3.1',
    'pkce>=1.0.3',
    'praw>=7.3.0',
    'python-tumblpy>=1.1',
    'pywebutil[google-cloud,html]>=1.0',
    'requests>=2.22',
    'requests-oauth2client>=1.8.0',
    'requests-oauthlib>=1.0',
    'tweepy>=4.5',
]

[project.optional-dependencies]
app = [
    'flask-gae-static>=1.0',
    'gunicorn>=20.1.0',
    'ujson>=5.7.0',
    'werkzeug>=2.0',
]
build = [
    'build',
]

[tool.uv.sources]
arroba =            { editable = true, path = "../arroba" }
carbox =            { editable = true, path = "../carbox" }
lexrpc =            { editable = true, path = "../lexrpc" }
pywebutil =         { editable = true, path = "../webutil" }

# we currently use these from PyPI
# flask-gae-static =  { editable = true, path = "../flask-gae-static" }
# mf2util =           { editable = true, path = "../mf2util" }

[tool.uv.pip]
# this is in ~/.config/uv/uv.toml

[tool.deptry]
extend_exclude = ['build', 'dist', 'docs']

[tool.deptry.per_rule_ignores]
# these deps aren't used in the codebase but we want to keep them in the local venv
DEP002 = [
    'build',
    'gunicorn',
    'ujson',
]
